install(FILES granatier.desktop granatier_preview.png granatier.xml
              threeofthree.desktop threeofthree_preview.png threeofthree.xml
              crazy.desktop crazy_preview.png crazy.xml
              labyrinth.desktop labyrinth_preview.png labyrinth.xml
        DESTINATION  ${DATA_INSTALL_DIR}/granatier/arenas)
