
install(FILES player1.desktop player1.svgz player1_preview.svgz
        player2.desktop player2.svgz player2_preview.svgz
        player3.desktop player3.svgz player3_preview.svgz
        player4.desktop player4.svgz player4_preview.svgz
        player5.desktop player5.svgz player5_preview.svgz
        DESTINATION  ${DATA_INSTALL_DIR}/granatier/players)
